# scalar-openenv

./: .dockerignore  .env.example  Dockerfile  LICENSE  README.md  app.py  docker-compose.yml  inference.py  openenv.yaml  pyproject.toml
__pycache__/: app.cpython-312.pyc.1688617651344  app.cpython-312.pyc.2261671056640
client/: ORDER_HISTORY_FEATURES.md  README.md  index.html  jsconfig.json  package-lock.json  package.json
client/src/: App.jsx  main.jsx
openenv/: __init__.py  config.py  env.py  graders.py  models.py  node_bridge.py  simulator.py  tasks.py
openenv/__pycache__/: config.cpython-312.pyc.1895944167120  env.cpython-312.pyc.1895944166448  graders.cpython-312.pyc.1895944168912  graders.cpython-312.pyc.1966496912064  graders.cpython-312.pyc.2428624725040  models.cpython-312.pyc.1895944167344  simulator.cpython-312.pyc.1895944167568  tasks.cpython-312.pyc.1895944169024
openenv/server/: app.py  dockerfile  inference.py  openenv.yaml  requirements.txt
scripts/: docker-build.ps1  docker-build.sh  testing.sh  validate-openenv.py
server/: API-DOCUMENTATION.mdx  README.md  RECOMMENDATION-ENGINE.mdx  __init__.py  app.py  package-lock.json  package.json  server.js
server/__pycache__/: __init__.cpython-312.pyc.1437983934048  app.cpython-312.pyc.1437983934912  app.cpython-312.pyc.1688617652784  app.cpython-312.pyc.2046389883152  app.cpython-312.pyc.2428624725472
server/controllers/: admin-controller.js  auth-controller.js  contact-controller.js  developer-controller.js  kitchen-controller.js  openenv-controller.js  (+5 more)
tests/: api_test_report.txt  test.py
(+87 files in other folders)
