[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "food-dash-env"
version = "1.1.0"
description = "Deterministic restaurant dispatch OpenEnv environment for reinforcement learning evaluation."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "FoodDash OpenEnv" },
]
dependencies = [
  "fastapi",
  "uvicorn",
  "pydantic",
  "openai",
  "openenv-core>=0.2.0",
]
keywords = ["reinforcement-learning", "fastapi", "openenv", "restaurant", "simulation"]

[project.urls]
Homepage = "https://atharvakote-food-dash-env.hf.space"

[project.scripts]
server = "server.app:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["openenv*", "server*"]
